<resources>
    <string name="app_name">GameOver</string>
    <string name="login">Login</string>
    <string name="subscribers_name">Name</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">LOG IN</string>
    <string name="create_account">Create account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="fab_add_game">add game</string>
    <string name="search_voice">search voice</string>
    <string name="detail_text">"Mortal Kombat é uma série de jogos criados pelo estúdio de Chicago da Midway Games. Em 2011, depois da falência da Midway, a produção de Mortal Kombat foi adquirida pela Warner Bros, tornando-se em seguida na Netherealm. A Warner detém actualmente os direitos da série.  A produção do primeiro jogo foi baseada na ideia original que Ed Boon e John Tobias tinham em fazer um jogo em que participasse Jean-Claude Van Damme,[2] mas a ideia foi deixada de parte, e em vez disso foi criado Mortal Kombat, um jogo de luta com temas de fantasia e ciência, lançado em Outubro de 1992.[3] O jogo original, gerou muitas sequelas, vários jogos de acção-aventura, filmes (animados e live-action com a sua sequela) e séries de televisão (animadas e live-action). Outra média inclui banda desenhada, jogo de cartas e a Mortal Kombat: Live Tour, um teatro de artes marciais com personagens da série. "</string>
    <string name="Date">Created at</string>
    <string name="Description">Description</string>
    <string name="save_game">SAVE GAME</string>


    <string name="email">Email</string>
    <string name="msg_invalid_email">Email inválido</string>
    <string name="field_required">%1$s é de preenchimento obrigatório</string>
    <string name="password_doesnt_match">As senhas não são iguals</string>
    <string name="user_name">Name</string>
    <string name="go">Continue</string>
    <string name="logout">LOG OUT</string>
    <string name="search">search</string>

</resources>