<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".auth.LoginFragment">





    <LinearLayout
        android:id="@+id/loginLayout"
        android:background="@drawable/bg_around_layout"
        android:padding="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/hint_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:enabled="false"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/white"
            android:id="@+id/btnLogin"
            android:layout_marginTop="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:background="@color/red_700"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreateAccount"
            android:textColor="@color/purple_900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>


    </LinearLayout>
    <ImageView
        android:id="@+id/imgNetwork"
        app:layout_constraintBottom_toBottomOf="@id/loginLayout"
        app:layout_constraintEnd_toEndOf="@id/loginLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_wifi_off_24"
        android:layout_gravity="right"/>



    <androidx.appcompat.widget.AppCompatButton
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:background="@color/red_700"/>
    <androidx.appcompat.widget.AppCompatButton
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnContinue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:background="@color/teal_900"/>



</androidx.constraintlayout.widget.ConstraintLayout>