<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addGame.AddGameActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/img_splash" />

    <LinearLayout
        android:id="@+id/layoutAddGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_around_layout"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitleAddGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTitleAddGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/hint_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDateAddGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDateAddGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/Date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/edtDescriptionAddGame"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white"
                android:hint="@string/Description" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@color/red_700"
            android:text="@string/save_game"
            android:textColor="@color/white" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_photo_capture"
        android:padding="30dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintBottom_toTopOf="@id/layoutAddGame"
        app:layout_constraintEnd_toEndOf="@id/layoutAddGame"
        app:layout_constraintStart_toStartOf="@id/layoutAddGame"
        app:layout_constraintTop_toTopOf="@id/layoutAddGame" />

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/imgPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:civ_border_color="@color/red_700"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="@id/imgBack"
        app:layout_constraintEnd_toEndOf="@id/imgBack"
        app:layout_constraintStart_toStartOf="@id/imgBack"
        app:layout_constraintTop_toTopOf="@id/imgBack" />

</androidx.constraintlayout.widget.ConstraintLayout>